# research-lab

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/researches/: housing_reality.md
notebooks/: 01_caracteristicas_domicilio.ipynb  02_renda_e_orcamento.ipynb  03_retrato_domicilio_2025.ipynb
scripts/: validate_census_2010_ac.py
src/lab/enums/: uf.py
src/lab/infrastructure/database/: duckdb_adapter.py  migrations.py
src/lab/infrastructure/database/migrations/: 001_create_morador.sql  002_create_imovel.sql
src/lab/infrastructure/research/: duckdb_repository.py
src/lab/infrastructure/storage/: r2_adapter.py
src/lab/platform/data_source/: contract.py
src/lab/platform/database/: port.py
src/lab/platform/research/: manifest.py  registry.py  repository.py
src/lab/platform/storage/: port.py
src/lab/research/housing_reality/: manifest.py  params.py
src/lab/research/housing_reality/domain/: ports.py
src/lab/research/housing_reality/pipeline/: load_morador.py  runner.py
src/lab/research/housing_reality/sources/: _utils.py  census_2010.py  ibge_docs.py  pnadc_visita1.py
src/lab/research/housing_reality/sources/census_2010_layout/: domicilios.csv  emigracao.csv  mortalidade.csv  pessoas.csv
src/lab/research/housing_reality/sources/pnadc_layout/: moradores.csv
src/lab/research/property_inventory/: manifest.py  params.py
src/lab/research/property_inventory/domain/: ports.py
src/lab/research/property_inventory/pipeline/: runner.py
src/lab/research/property_inventory/sources/: ml_imoveis.py
src/lab/ui/: _pandas_model.py  _pipeline_runner.py  _save_worker.py  _worker.py  app.py  catalog.py  form.py  output.py  streamlit_app.py
tests/fixtures/census_2010/AC/: Amostra_Domicilios_12.txt  Amostra_Pessoas_12.txt
tests/infrastructure/database/: test_duckdb_adapter.py  test_migrations.py
tests/infrastructure/research/: test_duckdb_repository.py
tests/platform/research/: test_registry.py
tests/research/housing_reality/: test_params.py
tests/research/housing_reality/pipeline/: test_load_morador.py  test_runner.py
tests/research/housing_reality/sources/: test_census_2010.py  test_census_2010_integration.py  test_pnadc_visita1.py
