[project]
name = "research-lab"
version = "0.1.0"
description = "A research laboratory for domain studies, starting with housing reality in Brazil"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Emanuel Martins" }
]
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.0",
    "PySide6>=6.7.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=lab --cov-report=term-missing"

[tool.coverage.run]
source = ["lab"]
omit = [
    "*/infrastructure/storage/r2_adapter.py",
    "*/sources/ibge_docs.py",
    "*/ui/*.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true